# prjtrellis

./: .gitignore  BUILD  MODULE.bazel  bazel_database_path.h  extensions.bzl  prjtrellis_smoke_test.py
.bcr/: metadata.template.json  source.template.json
.github/: bcr-config.yml
