module(
    name = "prjtrellis",
    version = "1.4.0"
)

bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "boost.filesystem", version = "1.83.0")
bazel_dep(name = "boost.program_options", version = "1.83.0")
bazel_dep(name = "boost.system", version = "1.83.0")
bazel_dep(name = "boost.thread", version = "1.83.0")
bazel_dep(name = "boost.algorithm", version = "1.83.0")
bazel_dep(name = "boost.property_tree", version = "1.83.0")
bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

prjtrellis_db = use_extension(":extensions.bzl", "prjtrellis_db")
use_repo(prjtrellis_db, "prjtrellis_db")
